# 2025

./: LICENSE  README.md
round-1/crypto/chicken-or-egg/: challenge.yml  docker-compose.yml
round-1/crypto/khan-s-factorization-raid/: challenge.yml
round-1/crypto/new.---old/: challenge.yml
round-1/crypto/the-scribe-s-little-oopsie/: challenge.yml
round-1/crypto/zairan/: challenge.yml  docker-compose.yml
round-1/forensics/ghost-in-the-emulator/: challenge.yml
round-1/forensics/the-hidden-gerege/: challenge.yml
round-1/misc/cyber-horde-rises/: challenge.yml
round-1/misc/fake/: challenge.yml
round-1/misc/the-silent-post/: challenge.yml
round-1/misc/welcome/: challenge.yml
round-1/pwn/rop/: challenge.yml  docker-compose.yml
round-1/pwn/stack-swing/: challenge.yml  docker-compose.yml
round-1/reverse/darkness-of-the-digital-shaman/: challenge.yml
round-1/reverse/khan-s-secret-code/: challenge.yml
round-1/reverse/the-wisdom-of-the-eternal-blue-sky/: challenge.yml
round-1/web/green-thing/: challenge.yml  docker-compose.yml
round-1/web/heavenly-jinja/: challenge.yml
round-1/web/the-gerege/: challenge.yml  docker-compose.yml
round-1/web/the-gerege-revenge/: challenge.yml  docker-compose.yml
round-1/web/ultra-jinja---warmup/: challenge.yml  docker-compose.yml
round-2/pwn/ez-rop/: challenge.yml  (+1 more)
round-2/web/pwn4life/server/: Cargo.toml  Dockerfile
round-2/web/pwn4life/server/src/: main.rs
round-2/web/pwn4life/server/src/request/: dispatcher.rs
round-2/web/pwn4life/server/src/routes/: binary.rs  index.html  index.rs  mod.rs  request.rs
(+149 files in other folders)
