[package]
name = "pwn4life-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.7"
actix-web = "4.11.0"
curl = "0.4.49"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["fs"] }
url = "2.5.7"
